Fixed output of page content

--- a/html/index.html
+++ b/html/index.html
@@ -3,6 +3,7 @@
 <head>
     <link rel="stylesheet" type="text/css" href="html/css/default.css">
     <script src="html/js/default.js"></script>
+    <title>Pingery elm</title>
 </head>
 <body>
 
