--- a/html/index.html
+++ b/html/index.html
@@ -4,6 +4,12 @@
     <link rel="stylesheet" type="text/css" href="html/css/default.css">
     <script src="html/js/default.js"></script>
     <title>Pingery elm</title>
+    <script type="text/javascript" src="https://cdn.emailjs.com/dist/email.min.js"></script>
+    <script type="text/javascript">
+        (function(){
+            emailjs.init("user_m2krypvNlX5KYxMhLw22L");
+        })();
+    </script>
 </head>
 <body>
 
