Outsourced MailJS UserID into config file

--- a/html/index.html
+++ b/html/index.html
@@ -7,7 +7,7 @@
     <script type="text/javascript" src="https://cdn.emailjs.com/dist/email.min.js"></script>
     <script type="text/javascript">
         (function(){
-            emailjs.init("user_m2krypvNlX5KYxMhLw22L");
+            emailjs.init("[elm_MailJS_UserID]");
         })();
     </script>
 </head>
