--- a/html/contentblocks/ManageViewWebsiteOverviewContent.html
+++ b/html/contentblocks/ManageViewWebsiteOverviewContent.html
@@ -1,10 +1,10 @@
 <tr>
-    <td style="text-align: left;">
+    <td style="text-align: left; min-width: 200px;" >
         <div style="color:black">
             <a style="color:black" target="_blank" href="http://[elm_Website_URL]">[elm_Website_Name]</a>
         </div>
     </td>
-    <td style="text-align: left;">
+    <td style="text-align: left; min-width: 300px;">
         [elm_Website_URL]
     </td>
 </tr>
